fixed svg overflow issue

--- a/sass/_commerce.scss
+++ b/sass/_commerce.scss
@@ -126,7 +126,7 @@
                 > svg {
                         position: absolute;
                         z-index: -1;
-                        left: calc(50% + .125em);
+                        left: 50%;
                         bottom: -4em;
                         width: 50%;
                 }                          
